apps/timetagger/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timetagger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: timetagger
  template:
    metadata:
      labels:
        app: timetagger
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: timetagger
          ports:
            - containerPort: 80
              name: web
          image: ghcr.io/almarklein/timetagger:v26.1.3-nonroot
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - mountPath: /opt/_timetagger
              name: timetagger-storage
      volumes:
        - name: timetagger-storage
          persistentVolumeClaim:
            claimName: timetagger-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: timetagger
  namespace: timetagger
  labels:
    app: timetagger
spec:
  selector:
    app: timetagger
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
