apps/timetagger/route.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: timetagger
  namespace: timetagger
spec:
  parentRefs:
    - name: eg-internal
      namespace: envoy-gateway-system
      sectionName: internal
  hostnames:
    - "timetagger.local.kvlk.hu"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: timetagger
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
